--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,1 +1,28 @@
-<p>contact-detail works!</p>
+<div class="panel-group">
+    <div class="row panel panel-default">
+        <div class="row">
+            <div class="col-xs-12 strong">
+                <h3>Guy</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img alt="guy">
+            </div>
+            <div class="col-xs-6">
+                <button>Edit</button>
+                <button>Delete</button>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="row panel panel-default">
+            <p>{{ contact.email}}</p>
+            <p>{{ contact.phone}}</p>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+</div>
+
