Fixed the image paths

--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -2,12 +2,12 @@
     <div class="row panel panel-default">
         <div class="row">
             <div class="col-xs-12 strong">
-                <h3>Guy</h3>
+                <h3>{{ contact.name }}</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-6">
-                <img alt="guy">
+                <img src="{{ contact.imageUrl }}" alt= "{{ contact.name }}" >
             </div>
             <div class="col-xs-6">
                 <button>Edit</button>
