--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,5 +1,5 @@
-<div class="panel-group">
-    <div class="row panel panel-default">
+<div class="panel panel-default">
+    <div class="row panel-heading">
         <div class="row">
             <div class="col-xs-12 strong">
                 <h3>{{ contact.name }}</h3>
@@ -10,18 +10,15 @@
                 <img src="{{ contact.imageUrl }}" alt= "{{ contact.name }}" >
             </div>
             <div class="col-xs-6">
-                <button>Edit</button>
-                <button>Delete</button>
+                <button class="btn btn-primary">Edit</button>
+                <button class="btn btn-danger">Delete</button>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="row panel panel-default">
-            <p>{{ contact.email}}</p>
-            <p>{{ contact.phone}}</p>
-        </div>
+    <div class="row panel-body">
         <div class="row">
-
+            <p><strong>Email: </strong>{{ contact.email}}</p>
+            <p><strong>Phone: </strong>{{ contact.phone}}</p>
         </div>
     </div>
 </div>
