--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,29 +1,31 @@
-<div class="row panel panel-default">
-    <div class="col-xs-6">
-        <h3>Contacts</h3>
+<div class="panel panel-default">   
+    <div class="row panel-heading">
+        <div class="col-xs-5">
+            <h3>Contacts</h3>
+        </div>
+        <div class="col-xs-1">
+            <button class="btn btn-success">New Contact</button>
+        </div>
     </div>
-    <div class="col-xs-6">
-        <button class="btn btn-success">New Contact</button>
-    </div>
-</div>
-<div class="row panel panel-content">
-    <div class="col-xs-12">
-        <a 
-          href="#" 
-          class="list-group-item clearfix" 
-          *ngFor="let contact of contacts">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-            </div>
-            <span class="pull-right">
-                <img 
-                src="{{ contact.imageUrl }}" 
-                alt="{{ contact.name }}" 
-                class="img-responsive" 
-                style="max-height:  50px;">
-            </span>
-        </a>
-        <!-- <cms-recipe-item></cms-recipe-item> -->
+    <div class="row panel-body">
+        <div class="col-xs-12">
+            <a 
+            href="#" 
+            class="list-group-item clearfix" 
+            *ngFor="let contact of contacts">
+                <div class="pull-left">
+                    <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+                </div>
+                <span class="pull-right">
+                    <img 
+                    src="{{ contact.imageUrl }}" 
+                    alt="{{ contact.name }}" 
+                    class="img-responsive" 
+                    style="max-height:  50px;">
+                </span>
+            </a>
+            <!-- <cms-recipe-item></cms-recipe-item> -->
+        </div>
     </div>
 </div>
 
