--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">   
-    <div class="row panel-heading">
-        <div class="col-xs-5">
+    <div class="row panel-heading col-xs-12">
+        <div class="col-xs-9">
             <h3>Contacts</h3>
         </div>
         <div class="col-xs-1">
