--- a/src/app/contacts/contact-list/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-list/contact-item/contact-item.component.html
@@ -1,7 +1,6 @@
 <a 
 href="#" 
-class="list-group-item clearfix" 
-*ngFor="let contact of contacts">
+class="list-group-item clearfix">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ contact.name }}</h4>
     </div>
