--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="row panel-body">
         <div class="col-xs-12">
-            <cms-contact-item></cms-contact-item>
+            <cms-contact-item *ngFor="let contact of contacts"
+            [contact]="contact" (click)="onSelected(contact)"></cms-contact-item>
         </div>
     </div>
 </div>
