--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<cms-header (selectedFeatureEvent)=switchView($event)></cms-header>
-<div class="container pull-left" [ngSwitch]="selectedFeature">
-    <cms-documents *ngSwitchCase="'documents'"></cms-documents>
-    <cms-message-list *ngSwitchCase="'messages'"></cms-message-list>
-    <cms-contacts *ngSwitchCase="'contacts'"></cms-contacts>
+<cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+<div class="container pull-left">
+  <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
+  <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
+  <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
 </div>
