--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -12,12 +12,12 @@
     <div class="panel-body">
       <div class="pad-left-right">
         <div class="row">
-          <label>Description:</label>
+          <label>Description:&nbsp;</label>
           <span class="label-value">{{ document.description }}<!-- display document description here --></span>
         </div>
         <br>
         <div class="row">
-          <label>URL:</label>
+          <label>URL:&nbsp;</label>
           <span class="label-value">{{ document.url }}<!-- display document URL here --></span>
         </div>
       </div>
